--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         app:itemTextColor="@color/primary"
         app:itemIconTint="@color/primary"
+        app:itemShapeFillColor="@color/white"
         android:layout_height="match_parent"
         android:background="@color/secondary"
         app:menu="@menu/main_menu"
@@ -60,6 +61,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:fontFamily="@font/roboto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -67,6 +69,7 @@
                     android:textColor="@color/primary" />
 
                 <TextView
+                    android:fontFamily="@font/roboto_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tap_to_select_address"
@@ -78,6 +81,7 @@
         </RelativeLayout>
 
         <Button
+            android:fontFamily="@font/roboto"
             android:id="@+id/browse_partners"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="20dp"
