--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,13 @@
         <item name="colorOnSecondary">@color/primary</item>
     </style>
 
+    <!-- Customize your theme here. -->
+    <style name="Theme.VoloCustomer.Dark">
+        <item name="colorPrimary">@color/secondary</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorOnSecondary">@color/secondary</item>
+    </style>
+
+
 </resources>
